--- a/students-platform/server/package.json
+++ b/students-platform/server/package.json
@@ -15,11 +15,13 @@
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "express-validator": "^7.2.1",
-        "json-web-token": "^3.2.0",
+        "jsonwebtoken": "^9.0.2",
         "sequelize": "^6.37.5"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
         "@types/express": "^5.0.0",
+        "@types/jsonwebtoken": "^9.0.9",
         "@types/node": "^22.13.4",
         "nodemon": "^3.1.9",
         "pg": "^8.13.3",
